<resources>
    <string name="app_name">Mr Potato Head</string>

    <string name="arms">Arms</string>
    <string name="ears">Ears</string>
    <string name="eyes">Eyes</string>
    <string name="hat">Hat</string>
    <string name="stache">Mustache</string>
    <string name="shoes">Shoes</string>
    <string name="body">Body</string>
    <string name="brows">Eyebrows</string>
    <string name="glasses">Glasses</string>
    <string name="mouth">Mouth</string>
    <string name="nose">Nose</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_entry">EntryActivity</string>

    <string name="button">Click here to start</string>
</resources>
